<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AInScanPlotActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_detect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detect_devices" />

        <Spinner
            android:id="@+id/spinner_daqDev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect_device"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect_device"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_errInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#165B12" 
            android:paddingBottom="7dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFC"
        android:fadeScrollbars="false" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="#FCFCFC"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textView_lowChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/spinner_lowChan"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/lowChan_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <Spinner
                android:id="@+id/spinner_lowChan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/textView_lowChan" />

            <Spinner
                android:id="@+id/spinner_highChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_lowChan"
                android:layout_alignRight="@id/spinner_lowChan"
                android:layout_below="@id/spinner_lowChan" />

            <Spinner
                android:id="@+id/spinner_chanMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_highChan"
                android:layout_alignRight="@id/spinner_highChan"
                android:layout_below="@id/spinner_highChan" />
            
            <EditText
                android:id="@+id/editText_samplestoPlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_chanMode"
                android:layout_alignRight="@id/spinner_chanMode"
                android:layout_below="@id/spinner_chanMode"
                android:ems="10"
                android:inputType="number"
                android:text="@string/defaultSamplestoPlot_text" >
            </EditText>
            
            <EditText
                android:id="@+id/editText_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_samplestoPlot"
                android:layout_alignRight="@id/editText_samplestoPlot"
                android:layout_below="@id/editText_samplestoPlot"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinner_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_rate"
                android:layout_alignRight="@id/editText_rate"
                android:layout_below="@id/editText_rate" />

            <Spinner
                android:id="@+id/spinner_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_range"
                android:layout_alignRight="@id/spinner_range"
                android:layout_below="@id/spinner_range" />
            
            <TextView
                android:id="@+id/textView_chanMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/spinner_chanMode"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/spinner_lowChan"
                android:text="@string/chanMode_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />
            
             <TextView
                android:id="@+id/textView_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/textView_chanMode"
                android:layout_alignTop="@id/spinner_range"
                android:layout_marginTop="10dp"
                android:text="@string/range_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <TextView
                android:id="@+id/textView_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/textView_range"
                android:layout_alignTop="@id/spinner_unit"
                android:layout_below="@id/spinner_range"
                android:layout_marginTop="10dp"
                android:text="@string/unit_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <ToggleButton
                android:id="@+id/toggleButton_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_unit"
                android:layout_alignRight="@id/spinner_unit"
                android:layout_below="@id/spinner_unit"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:textOff="@string/start_button"
                android:textOn="@string/stop_button" />

            <TextView
                android:id="@+id/textView_highChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/textView_lowChan"
                android:layout_alignTop="@id/spinner_highChan"
                android:layout_marginTop="10dp"
                android:text="@string/highChan_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />
           
            <TextView
                android:id="@+id/textView_samplesPlotted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/editText_samplestoPlot"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/editText_samplestoPlot"
                android:text="@string/samplestoPlot_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <TextView
                android:id="@+id/textView_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/editText_rate"
                android:layout_alignBottom="@id/editText_rate"
                android:layout_toLeftOf="@+id/spinner_lowChan"
                android:text="@string/rate_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <LinearLayout
                android:id="@+id/layout_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/toggleButton_start"
                android:orientation="vertical" >

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>